styles.css
/*
font-family: 'Amiri', serif;
font-family: 'Crimson Text', serif;
*/

/*global*/
/** {
	background-color: rgba(255,0,0,0.1);
}*/

body { 
	font-family: 'Montserrat', Verdana, sans-serif; 
	color: #999; 
	background-color: #fff; 
	margin: 0;
}
html, body {
  margin:0;
}
img {
	display: block;
}
h1, h2, h3, h4, h5, h6 {
	font-weight: 400;
}
::selection {
	color: #FFF;
	background-color: #E4701E;
}
.hidden {
	display: none;
}
.container { 
	display: flex; 
	width: auto; 
	max-width: 54em;
	margin: 0 auto; 
	padding: 0;
	flex-wrap: wrap;
}
.container-fluid {
	width: 100%;
}
.main-nav {
	border-bottom: 1px dotted #CCC;
}
.logo {
	margin: 0 1em 0 0;
	height: 3em;
	width: 3em;
}
header.container {
	max-width: 59em;
	padding: 2em 1em;
}
header a {
	display: flex;
	align-items: center;
	border-bottom: none;
}
header h1 { 
	font-size: 1.25em; 
	margin: 0;
	line-height: 1.5em;
	color: #999;
}
header h2 {
	font-size: .825em;
	text-transform: uppercase;
	color: #444;
	margin: 0;
}
header h2 span {
	color: #E4701E;
}
h3 {
	font-size: 1.5em;
	width: 100%;
}
p { 
	font-family: 'Crimson Text', Georgia, sans-serif; font-weight: 300; 
	color: #333; 
	font-size: 1.5em; 
	line-height: 1.725em; 
	margin: 0.875em 0;
	width: 100%;
}
a { 
	text-decoration: none; 
	color: #666;
	border-bottom: 2px dotted #E4701E;
}
a:hover {
	color: #E4701E;
}

/*main summary*/

.summary {
	padding: 2em 0 1em;
}
.summary h3, .summary p {
	padding: 0 1em;
}

/*project thumbnails*/

.projects ul { 
	display: flex; 
	flex-flow: row wrap; 
	justify-content: flex-start; 
	list-style: none;
	margin: 0; padding: 0;
}
.project {
	width: calc(33.3% - 3em);
	margin: 1.5em;
}
.project a {
	border-bottom: none;
}
img.project-thumbnail {
	width: 100%;
	border: 1px solid rgba(0,0,0,.1);
	-webkit-filter: grayscale(100%);
	-webkit-transition: .2s ease-in-out; 
	filter: grayscale(100%);
	transition: .2s ease-in-out; 
}
img.project-thumbnail:hover { 
	-webkit-filter: grayscale(0%);
	-webkit-transition: .2s ease-in-out; 
	filter: grayscale(0%); 
	transition: .2s ease-in-out;
}		
.project h4 {
	font-size: 1.125em; 
	color: #999; 
	margin: 1em 0 .25em 0; 
}
.project-label { 
	font-size: 1.075em; 
	font-style: italic; 
	margin: 0; 
	line-height: 1.5em;
}

/*project-pages*/

.project-image-main {
	margin: 0 1.5em;
	border: 1px solid rgba(0,0,0,.1); 
	border-top: none;
	max-height: 33.68em;
	overflow: hidden;
}
.project-image-main img {
	width: 100%; 
	height: 100%;
}
.project-summary h3 {
	font-family: 'Crimson Text', Georgia, sans-serif; 
	font-weight: 700;
	font-size: 2.5em;
	line-height: 1.125em;
	color: #333;
	text-align: center; 
	margin: 2em .625em 0;
}
.project-summary h4 {
	text-transform: uppercase;
	width: 100%;
	text-align: center;
	margin: 1em 1.5em 4em;	
}
.project-summary section {
	width: calc(50% - 3em);
	margin: 0 1.5em; 
}
.project-summary section h5 {
	font-size: .875em;
	text-transform: uppercase;
	color: #E4701E;
	border-bottom: 1px dotted #CCC;
	padding-bottom: 1em;
}
.project-summary section p {
	font-size: 1.2em;
}
.project-gallery {
	padding: 1.5em;
}
.project-gallery img {
	width: 100%; 
	height: 100%;
	border: 1px solid rgba(0,0,0,.1); 
	margin-top: 1.5em;
}
nav.projects-navigation {
	padding: 3em 1.5em;
	width: 100%;
}
.projects-navigation ul {
	list-style: none;
	margin: 0; padding: 0;
	display: flex; 
	flex-flow: row; 
	justify-content: space-between; 
}
.projects-navigation ul li {
	max-width: 50%;
}
.projects-navigation a {
	border-bottom: none;
	display: flex;
	flex-flow: column nowrap;
}
.next {
	text-align: right;
} 
.nav-direction {
	font-size: .875em; 
	max-width: 17em;
	border-bottom: 1px dotted #CCC;
	padding-bottom: .75em;
}
.nav-project-title {
	font-family: 'Crimson Text', Georgia, sans-serif; 
	font-size: 1.313em;
	line-height: 1.325em;
	color: #333;
	padding: .5em; 
}
.nav-project-label {
	font-size: .75em; 
	text-transform: uppercase;
	color: #999;
	padding: 0 1em;
}

/*footer*/

footer a {
	width: 100%;
	color:#AAA;
	text-align: center;
	padding: 1.5em;
	margin: 1.5em auto 0;
	border-top: 1px dotted #CCC; 
	border-bottom: none;
}
footer a:hover {
	color:#999;
}

/*@media*/

@media (min-width: 15em) and (max-width: 53em) {
	.project:nth-child(odd) {
		width: calc(50% - 2.25em);
		margin: 1.5em 0.75em 0 1.5em; 
	}
	.project:nth-child(even) {
		width: calc(50% - 2.25em);
		margin: 1.5em 1.5em 0 0.75em; 
	}
	.project-image-main {
		margin: 0;
	}
	.project-summary section {
		width: calc(100% - 3em);
	}
}

